arc-script/arc-script-test/compile/src/snapshots/hir@pipe.arc-2.snap
---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_fail_todo/pipe.arc
---
[-- Found 4 errors --],
error: Type mismatch
   ┌─ /home/klas/Workspace/arc/arc-script/arc-script-test/compile/src/tests/expect_fail_todo/pipe.arc:16:42
   │
16 │     let b: fun(i32, i32) -> (i32, i32) = |(x, y)| (y, x) in
   │                                          ^^^^^^^^^^^^^^^ fun(i32, i32) -> (i32, i32) != fun(?) -> (?, ?)

error: Type mismatch
   ┌─ /home/klas/Workspace/arc/arc-script/arc-script-test/compile/src/tests/expect_fail_todo/pipe.arc:19:25
   │
19 │     let d: (i32, i32) = (a, a) |> b |> (c, c) in
   │                         ^^^^^^^^^^^ fun(i32, i32) -> (i32, i32) != fun((i32, i32)) -> ?

error: Type mismatch
   ┌─ /home/klas/Workspace/arc/arc-script/arc-script-test/compile/src/tests/expect_fail_todo/pipe.arc:19:25
   │
19 │     let d: (i32, i32) = (a, a) |> b |> (c, c) in
   │                         ^^^^^^^^^^^^^^^^^^^^^ (fun(i32) -> i32, fun(i32) -> i32) != fun(?) -> (i32, i32)

error: Type mismatch
   ┌─ /home/klas/Workspace/arc/arc-script/arc-script-test/compile/src/tests/expect_fail_todo/pipe.arc:23:5
   │
23 │     d
   │     ^ i32 != (i32, i32)


